fixed layout issues in pictures.html

--- a/css/full.css
+++ b/css/full.css
@@ -197,12 +197,13 @@ h3 {
 }
 
 .slideshow {
-  position: absolute;
+  position:absolute;
+  top: 60px;
   display: block;
   margin: auto;
   max-width: 100%;
-  margin-bottom: 40px;
   text-align: center;
+  height: 90%;
 }
 
 .button-right {
@@ -230,9 +231,9 @@ h3 {
 #slideimg {
   display: block;
   margin: auto;
-  min-width: 50%;
-  max-width: 100%;
-  min-height: 100%;
+  min-width: 30%;
+  max-width: 75%;
+  max-height: 100%;
 }
 
 .slidebackground {
